force-app/main/default/objects/MELCRMOPETOOL__MELGITCRM_Faq__c/MELCRMOPETOOL__MELGITCRM_Faq__c.object-meta.xml
<CustomObject>
    <label>FAQ</label>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>FAQ番号</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>Read</sharingModel>
</CustomObject>