force-app/main/default/objects/MELCRMOPETOOL__MELGITCRM_Faq__c/fields/MELCRMOPETOOL__Content__c.field-meta.xml
<CustomField>
    <fullName>MELCRMOPETOOL__Content__c</fullName>
    <label>内容</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>