force-app/main/default/objects/MELCRMOPETOOL__MELGITCRM_Faq__c/fields/MELCRMOPETOOL__ReferedCount__c.field-meta.xml
<CustomField>
    <fullName>MELCRMOPETOOL__ReferedCount__c</fullName>
    <label>参照回数</label>
    <summaryForeignKey>MELCRMOPETOOL__MELGITCRM_RelatedFAQ__c.MELCRMOPETOOL__Faq__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>