force-app/main/default/objects/MELCRMOPETOOL__MELGITCRM_Faq__c/listViews/MELCRMOPETOOL__All.listView-meta.xml
<ListView>
    <fullName>MELCRMOPETOOL__All</fullName>
    <columns>NAME</columns>
    <columns>MELCRMOPETOOL__Function__c</columns>
    <columns>MELCRMOPETOOL__Title__c</columns>
    <columns>MELCRMOPETOOL__Content__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>すべて選択</label>
</ListView>